--- a/res/layout/activity_questions.xml
+++ b/res/layout/activity_questions.xml
@@ -16,7 +16,9 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:text="@string/answer_unknown" />
+        android:minHeight="64dp"
+        android:text="@string/answer_unknown"
+        android:textSize="@dimen/button_text_size" />
 
     <Button
         android:id="@+id/button_no"
@@ -25,7 +27,9 @@
         android:layout_above="@+id/button_start"
         android:layout_alignLeft="@+id/button_start"
         android:layout_alignRight="@+id/button_start"
-        android:text="@string/answer_no" />
+        android:minHeight="64dp"
+        android:text="@string/answer_no"
+        android:textSize="@dimen/button_text_size" />
 
     <Button
         android:id="@+id/button_yes"
@@ -34,7 +38,9 @@
         android:layout_above="@+id/button_no"
         android:layout_alignLeft="@+id/button_no"
         android:layout_alignRight="@+id/button_no"
-        android:text="@string/answer_yes" />
+        android:minHeight="64dp"
+        android:text="@string/answer_yes"
+        android:textSize="@dimen/button_text_size" />
 
     <TextView
         android:id="@+id/beerNameDescription"
@@ -42,7 +48,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="@dimen/question_text_sze" />
 
 </RelativeLayout>
