--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">2dp</dimen>
     <dimen name="activity_vertical_margin">2dp</dimen>
-    <dimen name="aaa">24dp</dimen>
     <dimen name="bbb">18dp</dimen>
+    <dimen name="button_text_size">24dp</dimen>
+    <dimen name="question_text_sze">32dp</dimen>
    
 </resources>
