--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"    
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bk_02"
@@ -8,17 +9,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
-
-    <Button
-        android:id="@+id/button_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:minHeight="64dp"
-        android:text="@string/start"
-        android:textSize="@dimen/button_text_size" />
 
     <TextView
         android:id="@+id/introductionText"
@@ -31,5 +21,25 @@
         android:text="@string/introduction"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="@dimen/question_text_sze" />
+    
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/ad_unit_id"/>
+
+    <Button
+        android:id="@+id/button_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/adView"
+        android:layout_alignLeft="@+id/adView"
+        android:layout_alignParentRight="true"
+        android:minHeight="64dp"
+        android:text="@string/start"
+        android:textSize="@dimen/button_text_size" />
 
 </RelativeLayout>
